// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly with children 1`] = `
<ul
  aria-label="Menu"
  className="menu medium dummy-class-name"
  data-testid="menu"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
>
  <div
    className="typography secondary start singleLineEllipsis smallNormal title"
    data-testid="menu-title"
  >
    <label
      className="titleCaption titleCaptionBottom"
      data-testid="menu-title-caption"
    >
      my title
    </label>
  </div>
  <li
    aria-current={true}
    className="typography primary start singleLineEllipsis smallNormal item focused initialSelected"
    data-testid="menu-item_1"
    id="undefined-1"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="title"
    >
      item 1
    </div>
    
    <div
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "hidden",
        }
      }
    />
  </li>
  <li
    aria-current={false}
    className="typography primary start singleLineEllipsis smallNormal item initialSelected"
    data-testid="menu-item_2"
    id="undefined-2"
    onClick={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="title"
    >
      item 2
    </div>
    
    <div
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "hidden",
        }
      }
    />
  </li>
</ul>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<ul
  aria-label="Menu"
  className="menu medium dummy-class-name"
  data-testid="menu"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<ul
  aria-label="Menu"
  className="menu medium"
  data-testid="menu"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role="menu"
  tabIndex={0}
/>
`;
